[package]
name = "rust_sqlx"
version = "0.1.0"
authors = ["Michael CHLON <mic.a.elle.chlon@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.32.0", features = ["full"] }
watch = "0.2.3"
